gitops/apps/redisinsight/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisinsight
  namespace: databases
spec:
  selector:
    app.kubernetes.io/name: redisinsight
  ports:
  - name: http
    port: 80
    targetPort: access-http
